$FreeBSD$

ReleaseNotes for isdn4bsd             last edit-date: [Thu Oct 18 13:49:05 2001]
================================================================================

release 1.01
--------------------------------------------------------------------------------

 - add experimental support to send messages via the keypad facility to the
   PBX or exchange office. The messages - if supported - may be used to 
   configure and maintain optional services offered by the PBX or exchange
   office such as call deflection mailbox services. Please consult the
   nice documentation for the exchange you are connected to.

   Currently keypad messages can be send by using the isdnphone utilities
   "-k" switch on the command line. Don't forget to properly quote the
   message in case it contains shell meta characters!

 - add keyword "maxconnecttime" to isdnd to prevent a potential telco bill
   desaster. Caution: use only in conjunction with budgets to limit the number
   of dials per timeunit otherwise you will get endless redials and reconnects!

release 1.00
--------------------------------------------------------------------------------

 - CAPI interface driver and AVM B1/T1 driver added. Both were written and
   contributed by Juha-Matti Liukkonen <jml@cubical.fi> of Cubical Solutions 
   Ltd, Finnland. To support this, two new keywords were added to isdnd.rc:
   "firmware" to be used in the controller section and "clone" to be used
   in the entry section.


beta release 0.96
--------------------------------------------------------------------------------

 - it is now possible to mark an entry as valid for a specified day of week
   and a specific time range only to take advantage of some new tariff models.
   Please see the new keywords "valid" and "holidayfile" in isdnd.rc(5).
   This feature is considered experimental, use at your own risk!

 - keywords budget-callbacksfile and budget-calloutsfile added to isdnd's