@@ -165,6 +165,8 @@ Hans Petter Selasky	for his contribution of a driver for the
 Sergio de Souza Prallon	for the contribution of the itjc driver which
 			supports the NETJet-S and the Teles PCI-TJ cards
 
+Steve Looman		for the driver for a Compaq Microcom 610 ISDN card
+
 
                ------------------------------------------
 
